[package]
name = "handouts-navigator-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
serde_json = "1.0"
reqwest = "0.11.24"
tokio = { version = "1", features = ["full"] }
urlencoding = "1.0.0"